Rebecca Lin homework

--- a/index.erb
+++ b/index.erb
@@ -3,12 +3,12 @@
   <head>
       <meta http-equiv="Content-Type" content="text/html;
 					       charset=UTF-8">
-      <title>Welcome Database 751</title>
+      <title>Welcome to Dante's Font Inferno</title>
       <link rel="stylesheet" type="text/css" href="/styles.css">
   </head>
   <body>
 
-    <h1>Database 751 Visitors</h1>
+    <h1>Abandon hope, all ye who enter.</h1>
 
     <!-- This form submits a name to be remembered to the URL --
       -- /remember-me using the POST http method --> 
@@ -27,7 +27,7 @@
     <ul>
 
       <% data.each do |name, count| %>
-      <li><%= name %> visited <%= count %> times!</li>
+      <li><%= name %> visited Dante's Inferno <%= count %> times!</li>
       <% end %>
     </ul>
 
