--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+title {font-family: Times New Roman; color: red}
 h1 {
-    font-family: Verdana, sans-serif;
+    font-family: Comic Sans, sans-serif; color: blue
 }
